Minor UI improvement

--- a/find-the-invisible-dog/rules.css
+++ b/find-the-invisible-dog/rules.css
@@ -18,15 +18,16 @@ main {
 
 
 #splashscreen {
-	height: 100vmin;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	z-index: 20;
 	position: absolute;
+	background-color: black
 }
 
 	#splashscreen > video {
 		position: absolute;
-		object-fit: fill;
+		object-fit: contain;
 		width: 100%;
 		height: 100%;
 	}
