--- a/find-the-invisible-dog/rules.css
+++ b/find-the-invisible-dog/rules.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: "Machine Gunk";
+	src: url("Assets/Font/Machine Gunk.otf") format("opentype");
+}
+
 body {
 	height: 100vh; /* viewport height = 100%, adjustment not recommended */
 	width: 100vw; /* viewport width = 100%, adjustment not recommended */
@@ -5,15 +10,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	margin: 0;
-}
-
-main {
-	background-color: #FCE5B0;
-	box-sizing: border-box; /* border does not adds extra width or height */
-	border: 20px solid transparent;
-	height: 100vh;
-	width: 100vmin; /* minimum viewport 100%, can be adjusted */
-	position: relative;
 }
 
 
@@ -32,10 +28,38 @@ main {
 		height: 100%;
 	}
 
+#tutorial {
+	position: absolute;
+	background-color: black;
+	object-fit: contain;
+	width: 100%;
+	height: 100%;
+}
 
 ::-webkit-scrollbar {
 	width: 0px;
 	background: transparent;
+}
+
+p {
+	z-index: 5;
+	display: none;
+	font-family: 'Machine Gunk';
+	margin-bottom: 50%;
+	color: saddlebrown;
+	font-size: 8vw;
+	text-align: center;
+	-webkit-text-stroke: 0.5vw #56362C;
+}
+/*
+
+main {
+	background-color: #FCE5B0;
+	box-sizing: border-box;
+	border: 20px solid transparent;
+	height: 100vh;
+	width: 100vmin;
+	position: relative;
 }
 
 .title {
@@ -185,6 +209,7 @@ audio
 		height: 30%;
 	}
 }
+*/
 /*
 #lg
 {
